--- a/loan-emi-calculator.html
+++ b/loan-emi-calculator.html
@@ -3,142 +3,29 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Loan EMI Calculator</title>
+<title>Loan EMI Calculator | MegaToolsOnline</title>
+<meta name="description" content="Calculate your Loan EMI easily with our free online Loan EMI Calculator. Get monthly EMI, total interest and total payment instantly.">
+
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        background: linear-gradient(135deg, #1d1d1d, #434343);
-        color: #fff;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        height: 100vh;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .container {
-        background: #222;
-        padding: 30px;
-        border-radius: 20px;
-        width: 90%;
-        max-width: 450px;
-        box-shadow: 0 0 25px rgba(0,0,0,0.6);
-        animation: slideUp 0.8s ease-out;
-    }
-
-    @keyframes slideUp {
-        from { transform: translateY(40px); opacity: 0; }
-        to { transform: translateY(0); opacity: 1; }
-    }
-
-    h2 {
-        text-align: center;
-        margin-bottom: 20px;
-        color: #00eaff;
-        text-shadow: 0 0 10px #00eaff;
-    }
-
-    label {
-        font-weight: bold;
-        display: block;
-        margin: 10px 0 5px;
-    }
-
-    input {
-        width: 100%;
-        padding: 12px;
-        border-radius: 10px;
-        border: none;
-        outline: none;
-        margin-bottom: 15px;
-        font-size: 16px;
-    }
-
-    button {
-        width: 100%;
-        padding: 12px;
-        font-size: 18px;
-        border: none;
-        border-radius: 10px;
-        background: #00eaff;
-        cursor: pointer;
-        color: #111;
-        font-weight: bold;
-        transition: 0.3s;
-    }
-
-    button:hover {
-        background: #00bcd4;
-        transform: scale(1.05);
-    }
-
-    .result-box {
-        background: #111;
-        padding: 20px;
-        margin-top: 20px;
-        border-radius: 15px;
-        text-align: center;
-        display: none;
-        box-shadow: 0 0 15px rgba(0,255,255,0.4);
-    }
-
-    .result-box h3 {
-        margin: 10px 0;
-        color: #00eaff;
-    }
-</style>
-</head>
-<body>
-
-<div class="container">
-    <h2>Loan EMI Calculator</h2>
-
-    <label>Loan Amount (PKR)</label>
-    <input id="loanAmount" type="number" placeholder="Enter loan amount">
-
-    <label>Annual Interest Rate (%)</label>
-    <input id="interestRate" type="number" placeholder="Enter interest rate">
-
-    <label>Loan Tenure (Months)</label>
-    <input id="loanMonths" type="number" placeholder="Enter loan duration">
-
-    <button onclick="calculateEMI()">Calculate EMI</button>
-
-    <div class="result-box" id="result">
-        <h3>Your Monthly EMI:</h3>
-        <div id="emiValue" style="font-size:28px; margin-bottom:10px;"></div>
-
-        <h3>Total Payment:</h3>
-        <div id="totalPayment"></div>
-
-        <h3>Total Interest:</h3>
-        <div id="totalInterest"></div>
-    </div>
-</div>
-
-<script>
-function calculateEMI() {
-    let P = parseFloat(document.getElementById("loanAmount").value);
-    let R = parseFloat(document.getElementById("interestRate").value) / 12 / 100;
-    let N = parseFloat(document.getElementById("loanMonths").value);
-
-    if (!P || !R || !N) {
-        alert("Please fill all fields.");
-        return;
-    }
-
-    let EMI = (P * R * Math.pow(1 + R, N)) / (Math.pow(1 + R, N) - 1);
-    let totalPayment = EMI * N;
-    let totalInterest = totalPayment - P;
-
-    document.getElementById("emiValue").innerHTML = "PKR " + EMI.toFixed(2);
-    document.getElementById("totalPayment").innerHTML = "PKR " + totalPayment.toFixed(2);
-    document.getElementById("totalInterest").innerHTML = "PKR " + totalInterest.toFixed(2);
-
-    document.getElementById("result").style.display = "block";
+:root{
+  --bg1:#0a0f1e; --bg2:#1a2a44;
+  --accent:#00f2fe; --text:#e7fbff;
 }
-</script>
-
-</body>
-</html>
+body{
+  margin:0; font-family: Arial, sans-serif;
+  background: linear-gradient(135deg,var(--bg1),var(--bg2));
+  color: var(--text);
+  display: flex; justify-content:center; align-items:center; min-height:100vh; padding:20px;
+}
+.container{
+  background: rgba(255,255,255,0.05); border-radius:20px; padding:25px; width:100%; max-width:450px;
+  box-shadow: 0 20px 60px rgba(0,0,0,0.5); text-align:center; animation:slideUp 0.8s ease-out;
+}
+@keyframes slideUp{from{opacity:0; transform:translateY(40px);}to{opacity:1; transform:translateY(0);}}
+h2{color:var(--accent); text-shadow: 0 0 10px var(--accent);}
+input{width:100%; padding:12px; margin:10px 0; border-radius:10px; border:none; outline:none; font-size:16px;}
+button{width:100%; padding:12px; margin-top:10px; border:none; border-radius:10px; background:var(--accent); color:#111; font-weight:bold; cursor:pointer; transition:0.3s;}
+button:hover{transform: scale(1.05); background:#00bcd4;}
+.result-box{margin-top:20px; background:#111; padding:15px; border-radius:12px; display:none; box-shadow:0 0 15px rgba(0,255,255,0.4);}
+.result-box h3{margin:5px 0;}
+.meta{font-size:14px; margin-top:10px; colo
