--- a/currency-converter.html
+++ b/currency-converter.html
@@ -4,21 +4,23 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Currency Converter | MegaToolsOnline</title>
-<meta name="description" content="Convert currencies instantly with our free online Currency Converter tool. Fast, easy, and accurate.">
+<meta name="description" content="Convert currencies instantly with our free online Currency Converter. Supports USD, PKR, EUR, GBP, INR and more. Fast, accurate, and easy to use.">
 
 <style>
 body { font-family: Arial, sans-serif; background:#1a2a44; color:#e7fbff; display:flex; justify-content:center; align-items:center; height:100vh; margin:0; }
 .container{ background: rgba(255,255,255,0.05); padding:20px; border-radius:15px; text-align:center; width:90%; max-width:450px;}
-h2{color:#00f2fe;}
+h2{color:#00f2fe; margin-bottom:10px;}
 input, select{width:100%; padding:10px; margin:8px 0; border-radius:8px; border:none; font-size:16px;}
 button{width:100%; padding:10px; margin-top:10px; border:none; border-radius:8px; background:#00f2fe; color:#111; font-weight:bold; cursor:pointer;}
 button:hover{background:#00bcd4;}
 #result{margin-top:15px; font-size:20px; display:none;}
+.meta{font-size:14px; margin-top:20px; color:rgba(231,251,255,0.8); text-align:left;}
 </style>
 </head>
 <body>
 <div class="container">
 <h2>Currency Converter</h2>
+
 <input type="number" id="amount" placeholder="Enter amount" value="1">
 <select id="fromCurrency">
   <option value="USD" selected>USD - US Dollar</option>
@@ -37,28 +39,53 @@ button:hover{background:#00bcd4;}
 <button onclick="convertCurrency()">Convert</button>
 <div id="result"></div>
 
+<!-- SEO Content -->
+<div class="meta">
+  <h2>About This Tool</h2>
+  <p>The Currency Converter allows you to instantly convert any currency into another online. It supports popular currencies like USD, PKR, EUR, GBP, INR, and more. Ideal for travelers, online shopping, business, and personal use.</p>
+
+  <h2>How to Use</h2>
+  <ol>
+    <li>Enter the amount you want to convert.</li>
+    <li>Select the currency you have (From).</li>
+    <li>Select the currency you want (To).</li>
+    <li>Click "Convert" to see the instant result.</li>
+  </ol>
+
+  <h2>FAQs</h2>
+  <p><strong>Q:</strong> Is this Currency Converter free?<br>
+     <strong>A:</strong> Yes, it is completely free to use online without any registration.</p>
+  <p><strong>Q:</strong> Can I convert any currency?<br>
+     <strong>A:</strong> The tool supports major currencies worldwide and updates rates in real-time.</p>
+  <p><strong>Q:</strong> Can I use it on mobile?<br>
+     <strong>A:</strong> Yes, the tool is fully responsive and works on all devices including mobile, tablet, and desktop.</p>
+</div>
+</div>
+
 <script>
 async function convertCurrency(){
   const amount = parseFloat(document.getElementById('amount').value);
   const from = document.getElementById('fromCurrency').value;
   const to = document.getElementById('toCurrency').value;
 
-  if(!amount){ alert("Please enter a valid amount"); return; }
+  if(!amount || amount<=0){ alert("Please enter a valid amount"); return; }
 
   try {
     const response = await fetch(`https://api.exchangerate.host/convert?from=${from}&to=${to}&amount=${amount}`);
     const data = await response.json();
-    if(data.result){
+    if(data && data.result !== undefined){
       document.getElementById('result').style.display='block';
-      document.getElementById('result').innerText=`${amount} ${from} = ${data.result.toFixed(2)} ${to}`;
+      document.getElementById('result').innerText = `${amount} ${from} = ${data.result.toFixed(2)} ${to}`;
     } else {
-      alert("Conversion failed. Try again later.");
+      document.getElementById('result').style.display='block';
+      document.getElementById('result').innerText = "Conversion failed. Try again later.";
     }
-  } catch (error){
-    alert("Error connecting to API. Make sure you are online and using HTTPS.");
+  } catch(err){
+    document.getElementById('result').style.display='block';
+    document.getElementById('result').innerText = "Error connecting to API. Make sure you are online and using HTTPS.";
+    console.error(err);
   }
 }
 </script>
-</div>
 </body>
 </html>
