--- a/currency-converter.html
+++ b/currency-converter.html
@@ -22,27 +22,15 @@ button:hover{background:#00bcd4;}
 <h2>Currency Converter</h2>
 
 <input type="number" id="amount" placeholder="Enter amount" value="1">
-<select id="fromCurrency">
-  <option value="USD" selected>USD - US Dollar</option>
-  <option value="PKR">PKR - Pakistani Rupee</option>
-  <option value="EUR">EUR - Euro</option>
-  <option value="GBP">GBP - British Pound</option>
-  <option value="INR">INR - Indian Rupee</option>
-</select>
-<select id="toCurrency">
-  <option value="PKR" selected>PKR - Pakistani Rupee</option>
-  <option value="USD">USD - US Dollar</option>
-  <option value="EUR">EUR - Euro</option>
-  <option value="GBP">GBP - British Pound</option>
-  <option value="INR">INR - Indian Rupee</option>
-</select>
+<select id="fromCurrency"></select>
+<select id="toCurrency"></select>
 <button onclick="convertCurrency()">Convert</button>
 <div id="result"></div>
 
 <!-- SEO Content -->
 <div class="meta">
   <h2>About This Tool</h2>
-  <p>The Currency Converter allows you to instantly convert any currency into another online. It supports popular currencies like USD, PKR, EUR, GBP, INR, and more. Ideal for travelers, online shopping, business, and personal use.</p>
+  <p>The Currency Converter allows you to instantly convert any currency into another online. Supports major currencies like USD, PKR, EUR, GBP, INR, and more. Perfect for travelers, online shopping, business, or personal use.</p>
 
   <h2>How to Use</h2>
   <ol>
@@ -58,34 +46,62 @@ button:hover{background:#00bcd4;}
   <p><strong>Q:</strong> Can I convert any currency?<br>
      <strong>A:</strong> The tool supports major currencies worldwide and updates rates in real-time.</p>
   <p><strong>Q:</strong> Can I use it on mobile?<br>
-     <strong>A:</strong> Yes, the tool is fully responsive and works on all devices including mobile, tablet, and desktop.</p>
+     <strong>A:</strong> Yes, the tool is fully responsive and works on all devices.</p>
 </div>
 </div>
 
 <script>
-async function convertCurrency(){
+// Using exchangerate-api.com which works with GitHub Pages (CORS safe)
+const apiUrl = "https://api.exchangerate-api.com/v4/latest/USD";
+let rates = {};
+
+async function loadCurrencies(){
+  try{
+    const res = await fetch(apiUrl);
+    const data = await res.json();
+    rates = data.rates;
+    const currencies = Object.keys(rates).sort();
+
+    const fromSelect = document.getElementById('fromCurrency');
+    const toSelect = document.getElementById('toCurrency');
+
+    currencies.forEach(cur => {
+      const optionFrom = document.createElement('option');
+      optionFrom.value = cur;
+      optionFrom.text = cur;
+      fromSelect.add(optionFrom);
+
+      const optionTo = document.createElement('option');
+      optionTo.value = cur;
+      optionTo.text = cur;
+      toSelect.add(optionTo);
+    });
+
+    fromSelect.value = "USD";
+    toSelect.value = "PKR";
+
+  } catch(err){
+    alert("Failed to load currencies. Check your internet connection.");
+    console.error(err);
+  }
+}
+
+function convertCurrency(){
   const amount = parseFloat(document.getElementById('amount').value);
   const from = document.getElementById('fromCurrency').value;
   const to = document.getElementById('toCurrency').value;
 
-  if(!amount || amount<=0){ alert("Please enter a valid amount"); return; }
+  if(!amount || amount<=0){ alert("Enter a valid amount"); return; }
 
-  try {
-    const response = await fetch(`https://api.exchangerate.host/convert?from=${from}&to=${to}&amount=${amount}`);
-    const data = await response.json();
-    if(data && data.result !== undefined){
-      document.getElementById('result').style.display='block';
-      document.getElementById('result').innerText = `${amount} ${from} = ${data.result.toFixed(2)} ${to}`;
-    } else {
-      document.getElementById('result').style.display='block';
-      document.getElementById('result').innerText = "Conversion failed. Try again later.";
-    }
-  } catch(err){
-    document.getElementById('result').style.display='block';
-    document.getElementById('result').innerText = "Error connecting to API. Make sure you are online and using HTTPS.";
-    console.error(err);
-  }
+  if(!rates[from] || !rates[to]){ alert("Currency rates not loaded"); return; }
+
+  const result = (amount / rates[from]) * rates[to];
+  document.getElementById('result').style.display='block';
+  document.getElementById('result').innerText = `${amount} ${from} = ${result.toFixed(2)} ${to}`;
 }
+
+// Load currencies on page load
+window.onload = loadCurrencies;
 </script>
 </body>
 </html>
