--- a/age-calculator.html
+++ b/age-calculator.html
@@ -1,113 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Age Calculator – MegaToolsOnline</title>
-<meta name="description" content="Modern Age Calculator tool – calculate your age online easily.">
-<!-- Font Awesome CDN for icons -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<style>
-  body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(to right, #00bcd4, #e0f7fa);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-  }
-
-  .calculator {
-    background: #ffffff;
-    padding: 50px 35px;
-    border-radius: 20px;
-    box-shadow: 0 15px 35px rgba(0,0,0,0.25);
-    text-align: center;
-    max-width: 450px;
-    width: 100%;
-    position: relative;
-  }
-
-  .calculator h1 {
-    margin-bottom: 30px;
-    color: #004d40;
-    font-size: 2.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .calculator h1 i {
-    margin-right: 10px;
-    color: #ff9800;
-  }
-
-  input[type="date"] {
-    padding: 15px;
-    width: 100%;
-    border-radius: 10px;
-    border: 1px solid #00796b;
-    margin-bottom: 25px;
-    font-size: 16px;
-  }
-
-  button {
-    background: #00796b;
-    color: #fff;
-    border: none;
-    padding: 15px 30px;
-    border-radius: 10px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: 0.3s;
-  }
-
-  button:hover {
-    background: #004d40;
-    transform: scale(1.05);
-  }
-
-  #result {
-    margin-top: 30px;
-    font-size: 20px;
-    font-weight: bold;
-    color: #004d40;
-  }
-
-  @media(max-width: 500px) {
-    .calculator { padding: 30px 20px; }
-    input[type="date"], button { font-size: 14px; padding: 12px; }
-    .calculator h1 { font-size: 2rem; }
-  }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Exact DOB Age Finder – Age in Years Months Days Calculator</title>
+  <meta name="description" content="Free Exact DOB Age Finder Tool. Calculate your age in years, months, days, hours, and minutes instantly. Simple, fast DOB age calculator with full breakdown." />
+  <style>
+    body {font-family: Arial, sans-serif; background:#f7f7f7; margin:0; padding:20px;}
+    .container {max-width:600px; margin:auto; background:#fff; padding:25px; border-radius:12px; box-shadow:0 0 15px rgba(0,0,0,0.1);}    
+    h1 {text-align:center; font-size:26px; margin-bottom:20px;}
+    label {font-weight:bold;}
+    input {width:100%; padding:10px; margin-top:5px; margin-bottom:15px; border:1px solid #ccc; border-radius:8px;}
+    button {width:100%; padding:12px; background:#007bff; border:none; border-radius:8px; color:#fff; font-size:16px; cursor:pointer;}
+    button:hover {background:#005fcc;}
+    .result {margin-top:20px; padding:20px; background:#eef5ff; border-radius:10px; font-size:18px;}
+  </style>
 </head>
 <body>
+  <div class="container">
+    <h1>Exact DOB Age Finder – Full Breakdown Calculator</h1>
 
-<div class="calculator">
-  <h1><i class="fa fa-birthday-cake"></i>Age Calculator</h1>
-  <input type="date" id="birthdate" placeholder="Enter Your Birth Date">
-  <button onclick="calculateAge()"><i class="fa fa-calculator"></i> Calculate</button>
-  <div id="result"></div>
-</div>
+    <label for="dob">Select Your Date of Birth</label>
+    <input type="date" id="dob" />
 
-<script>
-function calculateAge() {
-  const birthDate = document.getElementById('birthdate').value;
-  if(!birthDate) {
-    alert("Please enter your birth date");
-    return;
-  }
-  const today = new Date();
-  const birth = new Date(birthDate);
-  let age = today.getFullYear() - birth.getFullYear();
-  const monthDiff = today.getMonth() - birth.getMonth();
-  if(monthDiff < 0 || (monthDiff === 0 && today.getDate() < birth.getDate())) {
-    age--;
-  }
-  document.getElementById('result').innerHTML = `You are <span style="color:#ff9800">${age}</span> years old.`;
-}
-</script>
+    <button onclick="calculateAge()">Calculate Age</button>
 
+    <div id="result" class="result" style="display:none;"></div>
+  </div>
+
+  <script>
+    function calculateAge() {
+      const dob = new Date(document.getElementById('dob').value);
+      if (!document.getElementById('dob').value) return;
+
+      const now = new Date();
+
+      let years = now.getFullYear() - dob.getFullYear();
+      let months = now.getMonth() - dob.getMonth();
+      let days = now.getDate() - dob.getDate();
+
+      if (days < 0) {
+        months--;
+        const prevMonth = new Date(now.getFullYear(), now.getMonth(), 0).getDate();
+        days += prevMonth;
+      }
+
+      if (months < 0) {
+        years--;
+        months += 12;
+      }
+
+      const diffMs = now - dob;
+      const hours = Math.floor(diffMs / (1000 * 60 * 60));
+      const minutes = Math.floor(diffMs / (1000 * 60));
+
+      document.getElementById('result').style.display = 'block';
+      document.getElementById('result').innerHTML = `
+        <strong>Your Age Details:</strong><br><br>
+        <b>Years:</b> ${years}<br>
+        <b>Months:</b> ${months}<br>
+        <b>Days:</b> ${days}<br>
+        <b>Total Hours Lived:</b> ${hours.toLocaleString()}<br>
+        <b>Total Minutes Lived:</b> ${minutes.toLocaleString()}<br>
+      `;
+    }
+  </script>
+
+  <div class="container" style="margin-top:30px;">
+    <h2>About This Exact DOB Age Finder Tool</h2>
+    <p>
+      This free online age finder tool helps you calculate your exact age using your Date of Birth (DOB). Unlike normal age calculators, this tool gives a complete breakdown including years, months, days, hours, and minutes.
+    </p>
+
+    <h3>What Makes This Age Calculator Unique?</h3>
+    <ul>
+      <li>Full detailed age breakdown</li>
+      <li>Accurate DOB-to-age calculation</li>
+      <li>Mobile-friendly and fast</li>
+      <li>No ads, no login required</li>
+    </ul>
+
+    <h3>Who Uses This Tool?</h3>
+    <p>
+      Students, job applicants, teachers, parents, doctors, and online users worldwide use DOB-based age finder tools for forms, verification, and documentation.
+    </p>
+
+    <h3>Frequently Asked Questions</h3>
+    <p><b>1. How do I calculate exact age?</b><br>This tool gives you exact years, months, and days instantly.</p>
+    <p><b>2. Can I calculate my age in hours?</b><br>Yes, this calculator shows total hours and minutes lived.</p>
+    <p><b>3. Is this tool 100% accurate?</b><br>Yes, it uses real-time date & time calculation for accuracy.</p>
+  </div>
 </body>
 </html>
